--- a/Nyla.html
+++ b/Nyla.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Nyla 💜</title>
 
 <style>
@@ -22,13 +22,13 @@ body {
 
 /* CHAT */
 .chat-container {
+  position: relative;
   max-width: 700px;
   height: 100vh;
-  margin: 0 auto;
+  margin: auto;
   background: #16161f;
   display: flex;
   flex-direction: column;
-  position: relative;
   z-index: 2;
 }
 
@@ -66,7 +66,7 @@ body {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 0.8rem;
 }
 
 .msg {
@@ -80,7 +80,7 @@ body {
 .user {
   align-self: flex-end;
   background: linear-gradient(135deg, #e879f9, #a78bfa);
-  color: #fff;
+  color: white;
   border-bottom-right-radius: 4px;
 }
 
@@ -93,7 +93,7 @@ body {
 .emotion {
   font-size: 0.7rem;
   opacity: 0.6;
-  margin-top: 4px;
+  margin-top: 2px;
   padding-left: 6px;
   color: #a78bfa;
 }
@@ -130,7 +130,7 @@ body {
 }
 
 /* LIVE2D */
-#live2d {
+#live2d-canvas {
   position: fixed;
   right: 0;
   bottom: 0;
@@ -158,18 +158,17 @@ body {
   <div class="messages" id="messages"></div>
 
   <div class="input-area">
-    <input id="input" placeholder="Message Nyla...">
+    <input id="input" placeholder="Message Nyla..." />
     <button id="send">➤</button>
   </div>
 </div>
 
-<canvas id="live2d"></canvas>
+<canvas id="live2d-canvas"></canvas>
 
-<!-- REQUIRED LIBS (DO NOT CHANGE ORDER) -->
-<script src="https://unpkg.com/live2dcubismcore@4.2.0/dist/live2dcubismcore.min.js"></script>
+<!-- 🔥 REQUIRED LIVE2D LIBS (ORDER MATTERS) -->
 <script src="https://unpkg.com/pixi.js@7.3.2/dist/pixi.min.js"></script>
+<script src="https://unpkg.com/@cubism/live2dcubismcore/dist/live2dcubismcore.min.js"></script>
 <script src="https://unpkg.com/pixi-live2d-display@0.4.0/dist/index.min.js"></script>
-<script src="https://unpkg.com/pixi-live2d-display@0.4.0/dist/cubism4.min.js"></script>
 
 <script>
 /* CHAT */
@@ -182,34 +181,36 @@ send.onclick = sendMsg;
 input.onkeydown = e => e.key === "Enter" && sendMsg();
 
 function addMsg(text, cls, emo) {
-  const m = document.createElement("div");
-  m.className = "msg " + cls;
-  m.textContent = text;
-  messages.appendChild(m);
+  const d = document.createElement("div");
+  d.className = "msg " + cls;
+  d.textContent = text;
+  messages.appendChild(d);
+
   if (emo) {
     const e = document.createElement("div");
     e.className = "emotion";
     e.textContent = emo;
-    m.appendChild(e);
+    d.appendChild(e);
   }
   messages.scrollTop = messages.scrollHeight;
 }
 
 async function sendMsg() {
   if (!input.value) return;
-  const t = input.value;
+  const text = input.value;
   input.value = "";
-  addMsg(t, "user");
+  addMsg(text, "user");
+
   try {
     const r = await fetch(API, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ message: t })
+      body: JSON.stringify({ message: text })
     });
     const d = await r.json();
     addMsg(d.reply, "nyla", d.emotion);
   } catch {
-    addMsg("Connection hiccup 😭", "nyla", "shocked");
+    addMsg("Nyla glitched 😭", "nyla", "shocked");
   }
 }
 
@@ -217,15 +218,14 @@ async function sendMsg() {
 (async () => {
   console.log("Loading Live2D...");
   const app = new PIXI.Application({
-    view: document.getElementById("live2d"),
+    view: document.getElementById("live2d-canvas"),
     width: 360,
     height: 560,
     backgroundAlpha: 0
   });
 
   const model = await PIXI.live2d.Live2DModel.from(
-    "./1113_v2/Z.model3.json",
-    { autoInteract: false }
+    "./1113_v2/Z.model3.json"
   );
 
   model.anchor.set(0.5, 1);
@@ -234,7 +234,6 @@ async function sendMsg() {
   model.y = 560;
 
   app.stage.addChild(model);
-  console.log("✅ Live2D loaded");
 })();
 </script>
 
