--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 <title>Nyla 💜</title>
 
 <style>
+/* -------- RESET -------- */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+html, body {
+  width: 100%;
+  height: 100%;
 }
 
+/* -------- BODY -------- */
 body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   background: #0f0f1a;
   color: #e4e4e7;
-  height: 100vh;
   overflow: hidden;
 }
 
-/* CHAT */
-.chat-container {
-  position: relative;
-  max-width: 700px;
-  height: 100vh;
+/* -------- APP LAYOUT (MOBILE SAFE) -------- */
+.app {
+  position: fixed;
+  inset: 0;
+  max-width: 720px;
   margin: 0 auto;
-  background: #16161f;
   display: flex;
   flex-direction: column;
-  z-index: 2;
+  background: #16161f;
 }
 
-.chat-header {
+/* -------- HEADER -------- */
+.header {
+  padding: 14px 16px;
   background: #1a1a26;
-  padding: 1rem;
   border-bottom: 1px solid #2a2a3a;
-}
-
-.header-content {
   display: flex;
   align-items: center;
-  gap: 0.75rem;
+  gap: 12px;
 }
 
-.nyla-avatar {
+.avatar {
   width: 42px;
   height: 42px;
   border-radius: 50%;
@@ -52,36 +54,39 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
-  color: white;
+  font-weight: 700;
 }
 
+.header h1 {
+  font-size: 1.1rem;
+}
 .status {
   font-size: 0.75rem;
   color: #a78bfa;
 }
 
+/* -------- MESSAGES -------- */
 .messages {
   flex: 1;
   overflow-y: auto;
-  padding: 1rem;
+  padding: 16px;
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 10px;
 }
 
 .msg {
   max-width: 75%;
-  padding: 0.75rem 1rem;
+  padding: 10px 14px;
   border-radius: 16px;
   font-size: 0.95rem;
-  animation: fadeIn 0.25s ease;
+  animation: fadeIn 0.2s ease;
 }
 
 .user {
   align-self: flex-end;
   background: linear-gradient(135deg, #e879f9, #a78bfa);
-  color: white;
+  color: #fff;
   border-bottom-right-radius: 4px;
 }
 
@@ -94,151 +99,117 @@ body {
 .emotion {
   font-size: 0.7rem;
   opacity: 0.6;
-  margin-top: 2px;
-  padding-left: 6px;
+  margin-top: 4px;
   color: #a78bfa;
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(6px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-.input-area {
-  padding: 1rem;
+/* -------- INPUT -------- */
+.input {
+  padding: 12px;
   background: #1a1a26;
   border-top: 1px solid #2a2a3a;
   display: flex;
-  gap: 0.5rem;
+  gap: 8px;
 }
 
-.input-area input {
+.input input {
   flex: 1;
   background: transparent;
-  border: none;
-  outline: none;
+  border: 1px solid #2a2a3a;
+  border-radius: 20px;
+  padding: 10px 14px;
   color: #e4e4e7;
+  outline: none;
 }
 
-.input-area button {
-  width: 36px;
-  height: 36px;
+.input button {
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
   border: none;
   background: linear-gradient(135deg, #e879f9, #a78bfa);
   color: white;
-  cursor: pointer;
+  font-size: 1.1rem;
 }
 
-/* LIVE2D */
-#live2d-canvas {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  width: 360px;
-  height: 560px;
-  pointer-events: none;
-  z-index: 1;
+/* -------- ANIM -------- */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(6px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 </style>
 </head>
 
 <body>
 
-<div class="chat-container">
-  <div class="chat-header">
-    <div class="header-content">
-      <div class="nyla-avatar">N</div>
-      <div>
-        <h2>Nyla</h2>
-        <div class="status">online</div>
-      </div>
+<div class="app">
+  <div class="header">
+    <div class="avatar">N</div>
+    <div>
+      <h1>Nyla</h1>
+      <div class="status">online</div>
     </div>
   </div>
 
   <div class="messages" id="messages"></div>
 
-  <div class="input-area">
-    <input id="input" placeholder="Message Nyla..." />
+  <div class="input">
+    <input id="input" placeholder="Message Nyla..." autocomplete="off">
     <button id="send">➤</button>
   </div>
 </div>
 
-<canvas id="live2d-canvas"></canvas>
-
-<!-- REQUIRED LIVE2D LIBS -->
-<script src="https://unpkg.com/@cubism/live2dcubismcore@4.2.0/dist/live2dcubismcore.min.js"></script>
-<script src="https://unpkg.com/pixi.js@7.3.2/dist/pixi.min.js"></script>
-<script src="https://unpkg.com/pixi-live2d-display@0.4.0/dist/index.min.js"></script>
-
 <script>
-/* CHAT */
-const API = "https://nyla-api.onrender.com/nyla";
+/* -------- CONFIG -------- */
+const API_URL = "https://nyla-api.onrender.com/nyla";
+
+/* -------- ELEMENTS -------- */
 const messages = document.getElementById("messages");
 const input = document.getElementById("input");
 const send = document.getElementById("send");
 
-send.onclick = sendMsg;
-input.onkeydown = e => e.key === "Enter" && sendMsg();
+/* -------- EVENTS -------- */
+send.onclick = sendMessage;
+input.addEventListener("keydown", e => {
+  if (e.key === "Enter") sendMessage();
+});
 
-function addMsg(text, cls, emo) {
-  const d = document.createElement("div");
-  d.className = "msg " + cls;
-  d.textContent = text;
-  messages.appendChild(d);
-  if (emo) {
-    const e = document.createElement("div");
-    e.className = "emotion";
-    e.textContent = emo;
-    d.appendChild(e);
+/* -------- FUNCTIONS -------- */
+function addMessage(text, who, emotion) {
+  const msg = document.createElement("div");
+  msg.className = "msg " + who;
+  msg.textContent = text;
+  messages.appendChild(msg);
+
+  if (emotion && who === "nyla") {
+    const emo = document.createElement("div");
+    emo.className = "emotion";
+    emo.textContent = emotion;
+    msg.appendChild(emo);
   }
+
   messages.scrollTop = messages.scrollHeight;
 }
 
-async function sendMsg() {
-  if (!input.value) return;
-  const text = input.value;
+async function sendMessage() {
+  const text = input.value.trim();
+  if (!text) return;
+
   input.value = "";
-  addMsg(text, "user");
+  addMessage(text, "user");
+
   try {
-    const r = await fetch(API, {
+    const res = await fetch(API_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ message: text })
     });
-    const d = await r.json();
-    addMsg(d.reply, "nyla", d.emotion);
+    const data = await res.json();
+    addMessage(data.reply, "nyla", data.emotion);
   } catch {
-    addMsg("Nyla glitched 😭", "nyla", "shocked");
+    addMessage("I glitched 😭 try again", "nyla", "shocked");
   }
 }
-
-/* LIVE2D */
-(async () => {
-  console.log("Loading Live2D...");
-  const app = new PIXI.Application({
-    view: document.getElementById("live2d-canvas"),
-    width: 360,
-    height: 560,
-    backgroundAlpha: 0
-  });
-
-  try {
-    const model = await PIXI.live2d.Live2DModel.from(
-      "./1113_v2/Z.model3.json"
-    );
-
-    model.anchor.set(0.5, 1);
-    model.scale.set(0.45);
-    model.x = app.renderer.width / 2;
-    model.y = app.renderer.height;
-
-    app.stage.addChild(model);
-    console.log("Nyla Live2D loaded 💜");
-  } catch (e) {
-    console.error("Live2D failed:", e);
-  }
-})();
 </script>
 
 </body>
