--- a/index.html
+++ b/index.html
@@ -1,126 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1, viewport-fit=cover"
-/>
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <title>Nyla 💜</title>
 
 <style>
-/* ---------- RESET ---------- */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+/* ========= THEME ========= */
+:root {
+  --bg: #0f0f1a;
+  --panel: #16161f;
+  --header: #1a1a26;
+  --bubble: #1e1e2e;
+  --accent: #a78bfa;
+  --accent-grad: linear-gradient(135deg, #e879f9, #a78bfa);
 }
 
-html, body {
-  height: 100%;
-}
+/* ========= RESET ========= */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+html, body { height: 100%; }
 
-/* ---------- BODY ---------- */
 body {
-  min-height: 100dvh;
-  background: #0f0f1a;
+  background: var(--bg);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   color: #e4e4e7;
+  min-height: 100dvh;
 }
 
-/* ---------- APP ---------- */
+/* ========= APP ========= */
 .app {
   min-height: 100dvh;
   max-width: 720px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  background: #16161f;
+  background: var(--panel);
+  transition: box-shadow 0.4s ease;
 }
 
-/* ---------- HEADER ---------- */
+/* ========= HEADER ========= */
 .header {
   padding: 16px;
-  background: #1a1a26;
+  background: var(--header);
   border-bottom: 1px solid #2a2a3a;
   display: flex;
-  align-items: center;
   gap: 12px;
+  align-items: center;
 }
 
 .avatar {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background: linear-gradient(135deg, #e879f9, #a78bfa);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: var(--accent-grad);
+  display: grid;
+  place-items: center;
   font-weight: 700;
   color: white;
 }
 
-.header-text h1 {
-  font-size: 18px;
-  line-height: 1.2;
-}
+.header h1 { font-size: 18px; }
+.status { font-size: 12px; color: var(--accent); }
 
-.header-text span {
-  font-size: 12px;
-  color: #a78bfa;
-}
-
-/* ---------- MESSAGES ---------- */
+/* ========= MESSAGES ========= */
 .messages {
   flex: 1 1 auto;
   min-height: 0;
   padding: 16px;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  overflow-y: auto;
+  gap: 12px;
 }
 
-/* ---------- MESSAGE ---------- */
+/* ========= MESSAGE ========= */
 .msg {
   max-width: 75%;
   padding: 12px 14px;
   border-radius: 16px;
   font-size: 15px;
   line-height: 1.5;
-  animation: pop 0.2s ease;
+  animation: slideIn 0.25s ease;
 }
 
-@keyframes pop {
-  from { opacity: 0; transform: translateY(6px); }
-  to { opacity: 1; transform: translateY(0); }
+@keyframes slideIn {
+  from { opacity: 0; transform: translateY(8px) scale(0.98); }
+  to   { opacity: 1; transform: translateY(0) scale(1); }
 }
 
 .msg.user {
   align-self: flex-end;
-  background: linear-gradient(135deg, #e879f9, #a78bfa);
+  background: var(--accent-grad);
   color: white;
   border-bottom-right-radius: 4px;
 }
 
 .msg.nyla {
   align-self: flex-start;
-  background: #1e1e2e;
+  background: var(--bubble);
   border-bottom-left-radius: 4px;
 }
 
+/* ========= EMOTION LABEL ========= */
 .emotion {
   font-size: 11px;
   margin-top: 4px;
   opacity: 0.6;
-  color: #a78bfa;
+  color: var(--accent);
 }
 
-/* ---------- INPUT ---------- */
+/* ========= TYPING INDICATOR ========= */
+.typing {
+  display: flex;
+  gap: 6px;
+  padding: 10px 14px;
+  background: var(--bubble);
+  border-radius: 16px;
+  width: fit-content;
+}
+
+.dot {
+  width: 6px;
+  height: 6px;
+  background: var(--accent);
+  border-radius: 50%;
+  animation: bounce 1.2s infinite ease-in-out;
+}
+
+.dot:nth-child(2) { animation-delay: .15s; }
+.dot:nth-child(3) { animation-delay: .3s; }
+
+@keyframes bounce {
+  0%, 80%, 100% { transform: scale(0.8); opacity: .5; }
+  40% { transform: scale(1.2); opacity: 1; }
+}
+
+/* ========= INPUT ========= */
 .input-area {
   padding: 14px;
-  background: #1a1a26;
+  background: var(--header);
   border-top: 1px solid #2a2a3a;
   display: flex;
   gap: 10px;
@@ -141,69 +159,96 @@ body {
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  background: linear-gradient(135deg, #e879f9, #a78bfa);
+  background: var(--accent-grad);
   color: white;
   font-size: 18px;
 }
 
-.input-area button:disabled {
-  opacity: 0.5;
-}
+.input-area button:disabled { opacity: 0.5; }
+
+/* ========= EMOTION UI EFFECTS ========= */
+.app.happy   { box-shadow: 0 0 25px rgba(232,121,249,.35); }
+.app.blush   { box-shadow: 0 0 30px rgba(167,139,250,.45); }
+.app.angry   { box-shadow: 0 0 30px rgba(239,68,68,.45); }
+.app.excited { box-shadow: 0 0 35px rgba(56,189,248,.45); }
+.app.sleepy  { box-shadow: 0 0 20px rgba(148,163,184,.35); }
+
 </style>
 </head>
 
 <body>
 
-<div class="app">
-
-  <!-- HEADER -->
+<div class="app" id="app">
   <div class="header">
     <div class="avatar">N</div>
-    <div class="header-text">
+    <div>
       <h1>Nyla</h1>
-      <span>online</span>
+      <div class="status">online</div>
     </div>
   </div>
 
-  <!-- MESSAGES -->
   <div class="messages" id="messages"></div>
 
-  <!-- INPUT -->
   <div class="input-area">
     <input id="input" placeholder="Message Nyla..." autocomplete="off">
     <button id="send">➤</button>
   </div>
-
 </div>
 
 <script>
-const API_URL = "https://nyla-api.onrender.com/nyla";
+/* ========= CONFIG ========= */
+const API = "https://nyla-api.onrender.com/nyla";
 
+/* ========= ELEMENTS ========= */
+const app = document.getElementById("app");
 const messages = document.getElementById("messages");
 const input = document.getElementById("input");
 const send = document.getElementById("send");
 
 let busy = false;
+let typingBubble = null;
 
+/* ========= EVENTS ========= */
 send.onclick = sendMessage;
 input.onkeydown = e => e.key === "Enter" && sendMessage();
 
+/* ========= HELPERS ========= */
 function addMessage(text, who, emotion) {
-  const box = document.createElement("div");
-  box.className = "msg " + who;
-  box.textContent = text;
+  const msg = document.createElement("div");
+  msg.className = "msg " + who;
+  msg.textContent = text;
+  messages.appendChild(msg);
 
   if (emotion && who === "nyla") {
     const emo = document.createElement("div");
     emo.className = "emotion";
     emo.textContent = emotion;
-    box.appendChild(emo);
+    msg.appendChild(emo);
+    triggerEmotionUI(emotion);
   }
 
-  messages.appendChild(box);
   messages.scrollTop = messages.scrollHeight;
 }
 
+function showTyping() {
+  typingBubble = document.createElement("div");
+  typingBubble.className = "typing";
+  typingBubble.innerHTML = `<div class="dot"></div><div class="dot"></div><div class="dot"></div>`;
+  messages.appendChild(typingBubble);
+  messages.scrollTop = messages.scrollHeight;
+}
+
+function removeTyping() {
+  if (typingBubble) typingBubble.remove();
+  typingBubble = null;
+}
+
+function triggerEmotionUI(emotion) {
+  app.className = "app " + emotion;
+  setTimeout(() => app.className = "app", 1200);
+}
+
+/* ========= SEND ========= */
 async function sendMessage() {
   const text = input.value.trim();
   if (!text || busy) return;
@@ -213,23 +258,30 @@ async function sendMessage() {
 
   busy = true;
   send.disabled = true;
+  showTyping();
 
   try {
-    const res = await fetch(API_URL, {
+    const res = await fetch(API, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ message: text })
     });
 
     const data = await res.json();
+    removeTyping();
     addMessage(data.reply, "nyla", data.emotion);
+
   } catch {
-    addMessage("Nyla tripped 😭 try again", "nyla", "shocked");
+    removeTyping();
+    addMessage("I lagged 😭 try again", "nyla", "shocked");
   }
 
   busy = false;
   send.disabled = false;
 }
+
+/* ========= GREETING ========= */
+addMessage("Heyyy 💜 I’m Nyla. Talk to me~", "nyla", "excited");
 </script>
 
 </body>
