--- a/index.html
+++ b/index.html
@@ -2,142 +2,140 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Nyla 💜</title>
 
-<style>
-:root {
-  --bg: #0f0f1a;
-  --panel: #16161f;
-  --header: #1a1a26;
-  --bubble: #1e1e2e;
-  --accent: #a78bfa;
-  --accent-grad: linear-gradient(135deg, #e879f9, #a78bfa);
-}
+<!-- SUPABASE -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-* { margin: 0; padding: 0; box-sizing: border-box; }
-html, body { height: 100%; }
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
 
 body {
-  background: var(--bg);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  background: #0f0f1a;
   color: #e4e4e7;
-  min-height: 100dvh;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 
-.app {
-  min-height: 100dvh;
-  max-width: 720px;
-  margin: 0 auto;
+/* CHAT CONTAINER */
+.chat-container {
+  width: 100%;
+  max-width: 700px;
+  height: 100vh;
+  background: #16161f;
   display: flex;
   flex-direction: column;
-  background: var(--panel);
-  transition: box-shadow 0.4s ease;
 }
 
 /* HEADER */
-.header {
-  padding: 16px;
-  background: var(--header);
+.chat-header {
+  background: linear-gradient(90deg, #1a1a26, #1f1f33);
+  padding: 1rem;
   border-bottom: 1px solid #2a2a3a;
+}
+
+.header-content {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 0.75rem;
 }
 
-.avatar {
-  width: 44px;
-  height: 44px;
+.nyla-avatar {
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
-  background: var(--accent-grad);
-  display: grid;
-  place-items: center;
-  font-weight: 700;
-  color: white;
+  background: linear-gradient(135deg, #e879f9, #a78bfa);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
 }
 
-.header h1 { font-size: 18px; }
-.status { font-size: 12px; color: var(--accent); }
+.status {
+  font-size: 0.75rem;
+  color: #a78bfa;
+}
 
 /* MESSAGES */
 .messages {
-  flex: 1 1 auto;
-  min-height: 0;
-  padding: 16px;
+  flex: 1;
   overflow-y: auto;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 0.75rem;
 }
 
-/* MESSAGE */
-.msg {
+.message {
   max-width: 75%;
-  padding: 12px 14px;
+  padding: 0.75rem 1rem;
   border-radius: 16px;
-  font-size: 15px;
-  line-height: 1.5;
-  animation: slideIn 0.25s ease;
+  animation: popIn 0.25s ease;
+  word-wrap: break-word;
 }
 
-@keyframes slideIn {
-  from { opacity: 0; transform: translateY(8px) scale(0.98); }
-  to   { opacity: 1; transform: translateY(0) scale(1); }
+@keyframes popIn {
+  from { opacity: 0; transform: translateY(8px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
-.msg.user {
+.user {
   align-self: flex-end;
-  background: var(--accent-grad);
-  color: white;
+  background: linear-gradient(135deg, #e879f9, #a78bfa);
+  color: #fff;
   border-bottom-right-radius: 4px;
 }
 
-.msg.nyla {
+.nyla {
   align-self: flex-start;
-  background: var(--bubble);
+  background: #1e1e2e;
   border-bottom-left-radius: 4px;
 }
 
 .emotion {
-  font-size: 11px;
-  margin-top: 4px;
+  font-size: 0.7rem;
   opacity: 0.6;
-  color: var(--accent);
+  margin-top: 3px;
+  color: #a78bfa;
 }
 
 /* TYPING */
 .typing {
   display: flex;
-  gap: 6px;
-  padding: 10px 14px;
-  background: var(--bubble);
-  border-radius: 16px;
-  width: fit-content;
+  gap: 4px;
+  padding: 8px 12px;
 }
 
 .dot {
-  width: 6px;
-  height: 6px;
-  background: var(--accent);
+  width: 7px;
+  height: 7px;
+  background: #a78bfa;
   border-radius: 50%;
-  animation: bounce 1.2s infinite ease-in-out;
+  animation: bounce 1.4s infinite;
 }
 
-.dot:nth-child(2) { animation-delay: .15s; }
-.dot:nth-child(3) { animation-delay: .3s; }
+.dot:nth-child(2){ animation-delay: .2s }
+.dot:nth-child(3){ animation-delay: .4s }
 
 @keyframes bounce {
-  0%, 80%, 100% { transform: scale(0.8); opacity: .5; }
-  40% { transform: scale(1.2); opacity: 1; }
+  0%,80%,100%{ transform: translateY(0); opacity: .6 }
+  40%{ transform: translateY(-6px); opacity: 1 }
 }
 
 /* INPUT */
 .input-area {
-  padding: 14px;
-  background: var(--header);
+  padding: 1rem;
+  background: #1a1a26;
   border-top: 1px solid #2a2a3a;
   display: flex;
-  gap: 10px;
+  gap: 0.5rem;
 }
 
 .input-area input {
@@ -146,173 +144,136 @@ body {
   border: none;
   outline: none;
   color: #e4e4e7;
-  font-size: 15px;
 }
 
 .input-area button {
-  width: 40px;
-  height: 40px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   border: none;
-  cursor: pointer;
-  background: var(--accent-grad);
+  background: linear-gradient(135deg, #e879f9, #a78bfa);
   color: white;
-  font-size: 18px;
+  cursor: pointer;
 }
-
-.input-area button:disabled { opacity: 0.5; }
-
-/* EMOTION UI */
-.app.happy   { box-shadow: 0 0 25px rgba(232,121,249,.35); }
-.app.blush   { box-shadow: 0 0 30px rgba(167,139,250,.45); }
-.app.angry   { box-shadow: 0 0 30px rgba(239,68,68,.45); }
-.app.excited { box-shadow: 0 0 35px rgba(56,189,248,.45); }
-.app.sleepy  { box-shadow: 0 0 20px rgba(148,163,184,.35); }
 </style>
 </head>
 
 <body>
 
-<div class="app" id="app">
-  <div class="header">
-    <div class="avatar">N</div>
-    <div>
-      <h1>Nyla</h1>
-      <div class="status">online</div>
+<div class="chat-container">
+  <div class="chat-header">
+    <div class="header-content">
+      <div class="nyla-avatar">N</div>
+      <div>
+        <h2>Nyla</h2>
+        <div class="status">online</div>
+      </div>
     </div>
   </div>
 
   <div class="messages" id="messages"></div>
 
   <div class="input-area">
-    <input id="input" placeholder="Message Nyla..." autocomplete="off">
+    <input id="input" placeholder="Message Nyla..." />
     <button id="send">➤</button>
   </div>
 </div>
 
 <script>
-/* ================= CONFIG ================= */
-const API = "https://nyla-api.onrender.com/nyla";
-const STORAGE_KEY = "nyla_chat_history";
+/* SUPABASE INIT */
+const supabase = window.supabase.createClient(
+  "https://sjwwkmjfehsondqbmouu.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNqd3drbWpmZWhzb25kcWJtb3V1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU2MzE5MzksImV4cCI6MjA4MTIwNzkzOX0.cgooAxM2BXisi20RH-cKqardpt432dPAs1EI_mVqV0U"
+);
 
-/* ================= ELEMENTS ================= */
-const app = document.getElementById("app");
+/* API */
+const API_URL = "https://nyla-api.onrender.com/nyla";
+
+/* DOM */
 const messages = document.getElementById("messages");
 const input = document.getElementById("input");
 const send = document.getElementById("send");
 
-let busy = false;
-let typingBubble = null;
-let chatHistory = [];
-
-/* ================= LOAD HISTORY ================= */
-loadHistory();
-
-/* ================= EVENTS ================= */
 send.onclick = sendMessage;
 input.onkeydown = e => e.key === "Enter" && sendMessage();
 
-/* ================= FUNCTIONS ================= */
-function addMessage(text, sender, emotion = "") {
+/* UI */
+function addMessage(text, role, emotion=null) {
   const msg = document.createElement("div");
-  msg.className = "msg " + sender;
+  msg.className = `message ${role}`;
   msg.textContent = text;
 
-  if (emotion && sender === "nyla") {
-    const emo = document.createElement("div");
-    emo.className = "emotion";
-    emo.textContent = emotion;
-    msg.appendChild(emo);
-    triggerEmotionUI(emotion);
+  if (emotion) {
+    const e = document.createElement("div");
+    e.className = "emotion";
+    e.textContent = emotion;
+    msg.appendChild(e);
   }
 
   messages.appendChild(msg);
   messages.scrollTop = messages.scrollHeight;
-
-  chatHistory.push({ text, sender, emotion });
-  saveHistory();
 }
 
+/* TYPING */
+let typingEl;
 function showTyping() {
-  typingBubble = document.createElement("div");
-  typingBubble.className = "typing";
-  typingBubble.innerHTML = `<div class="dot"></div><div class="dot"></div><div class="dot"></div>`;
-  messages.appendChild(typingBubble);
+  typingEl = document.createElement("div");
+  typingEl.className = "message nyla";
+  typingEl.innerHTML = `<div class="typing">
+    <div class="dot"></div><div class="dot"></div><div class="dot"></div>
+  </div>`;
+  messages.appendChild(typingEl);
   messages.scrollTop = messages.scrollHeight;
 }
 
-function removeTyping() {
-  if (typingBubble) typingBubble.remove();
-  typingBubble = null;
+function hideTyping() {
+  typingEl?.remove();
 }
 
-function triggerEmotionUI(emotion) {
-  app.className = "app " + emotion;
-  setTimeout(() => app.className = "app", 1200);
+/* LOAD HISTORY */
+async function loadHistory() {
+  const { data } = await supabase
+    .from("messages")
+    .select("*")
+    .order("created_at");
+
+  data?.forEach(m => addMessage(m.content, m.role, m.emotion));
 }
 
-/* ================= STORAGE ================= */
-function saveHistory() {
-  localStorage.setItem(STORAGE_KEY, JSON.stringify(chatHistory));
-}
-
-function loadHistory() {
-  const saved = localStorage.getItem(STORAGE_KEY);
-  if (!saved) {
-    addMessage("Heyyy 💜 I’m Nyla. Talk to me~", "nyla", "excited");
-    return;
-  }
-
-  chatHistory = JSON.parse(saved);
-  chatHistory.forEach(m => {
-    const msg = document.createElement("div");
-    msg.className = "msg " + m.sender;
-    msg.textContent = m.text;
-
-    if (m.emotion && m.sender === "nyla") {
-      const emo = document.createElement("div");
-      emo.className = "emotion";
-      emo.textContent = m.emotion;
-      msg.appendChild(emo);
-    }
-
-    messages.appendChild(msg);
-  });
-
-  messages.scrollTop = messages.scrollHeight;
-}
-
-/* ================= SEND ================= */
+/* SEND */
 async function sendMessage() {
-  const text = input.value.trim();
-  if (!text || busy) return;
-
+  if (!input.value.trim()) return;
+  const text = input.value;
   input.value = "";
-  addMessage(text, "user");
 
-  busy = true;
-  send.disabled = true;
+  addMessage(text, "user");
+  await supabase.from("messages").insert({ role: "user", content: text });
+
   showTyping();
 
   try {
-    const res = await fetch(API, {
+    const r = await fetch(API_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ message: text })
     });
+    const d = await r.json();
 
-    const data = await res.json();
-    removeTyping();
-    addMessage(data.reply, "nyla", data.emotion);
+    hideTyping();
+    addMessage(d.reply, "nyla", d.emotion);
 
+    await supabase.from("messages").insert({
+      role: "nyla",
+      content: d.reply,
+      emotion: d.emotion
+    });
   } catch {
-    removeTyping();
-    addMessage("I lagged 😭 try again", "nyla", "shocked");
+    hideTyping();
+    addMessage("I glitched 😭", "nyla", "shocked");
   }
-
-  busy = false;
-  send.disabled = false;
 }
+
+loadHistory();
 </script>
 
 </body>
