--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Nyla 💜</title>
 
-<!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
@@ -16,72 +15,73 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background: #0f0f1a;
   color: #e4e4e7;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
+  overflow: hidden;
 }
 
-/* CHAT CONTAINER */
-.chat-container {
-  width: 100%;
-  max-width: 700px;
-  height: 100vh;
+/* ===== APP WRAPPER ===== */
+.app {
+  position: fixed;
+  inset: 0;
+  max-width: 720px;
+  margin: 0 auto;
   background: #16161f;
   display: flex;
   flex-direction: column;
 }
 
-/* HEADER */
-.chat-header {
-  background: linear-gradient(90deg, #1a1a26, #1f1f33);
-  padding: 1rem;
+/* ===== HEADER ===== */
+.header {
+  padding: 16px;
+  background: #1a1a26;
   border-bottom: 1px solid #2a2a3a;
-}
-
-.header-content {
   display: flex;
+  gap: 12px;
   align-items: center;
-  gap: 0.75rem;
 }
 
-.nyla-avatar {
-  width: 42px;
-  height: 42px;
+.avatar {
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
   background: linear-gradient(135deg, #e879f9, #a78bfa);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  place-items: center;
   font-weight: bold;
 }
 
 .status {
-  font-size: 0.75rem;
+  font-size: 12px;
   color: #a78bfa;
 }
 
-/* MESSAGES */
+/* ===== MESSAGES ===== */
 .messages {
-  flex: 1;
+  flex: 1 1 auto;
+  min-height: 0;
   overflow-y: auto;
-  padding: 1rem;
+  padding: 16px;
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 12px;
 }
 
-.message {
+.msg {
   max-width: 75%;
-  padding: 0.75rem 1rem;
+  padding: 12px 14px;
   border-radius: 16px;
-  animation: popIn 0.25s ease;
-  word-wrap: break-word;
+  font-size: 15px;
+  animation: pop 0.25s ease;
 }
 
-@keyframes popIn {
+@keyframes pop {
   from { opacity: 0; transform: translateY(8px); }
   to { opacity: 1; transform: translateY(0); }
 }
@@ -100,96 +100,91 @@ body {
 }
 
 .emotion {
-  font-size: 0.7rem;
+  font-size: 11px;
   opacity: 0.6;
-  margin-top: 3px;
+  margin-top: 4px;
   color: #a78bfa;
 }
 
-/* TYPING */
+/* ===== TYPING ===== */
 .typing {
   display: flex;
-  gap: 4px;
-  padding: 8px 12px;
+  gap: 6px;
 }
 
 .dot {
-  width: 7px;
-  height: 7px;
+  width: 6px;
+  height: 6px;
   background: #a78bfa;
   border-radius: 50%;
-  animation: bounce 1.4s infinite;
+  animation: bounce 1.2s infinite;
 }
 
-.dot:nth-child(2){ animation-delay: .2s }
-.dot:nth-child(3){ animation-delay: .4s }
+.dot:nth-child(2){animation-delay:.15s}
+.dot:nth-child(3){animation-delay:.3s}
 
 @keyframes bounce {
-  0%,80%,100%{ transform: translateY(0); opacity: .6 }
-  40%{ transform: translateY(-6px); opacity: 1 }
+  0%,80%,100%{opacity:.4}
+  40%{opacity:1}
 }
 
-/* INPUT */
-.input-area {
-  padding: 1rem;
+/* ===== INPUT ===== */
+.input {
+  padding: 14px;
   background: #1a1a26;
   border-top: 1px solid #2a2a3a;
   display: flex;
-  gap: 0.5rem;
+  gap: 10px;
 }
 
-.input-area input {
+.input input {
   flex: 1;
   background: transparent;
   border: none;
   outline: none;
   color: #e4e4e7;
+  font-size: 15px;
 }
 
-.input-area button {
-  width: 36px;
-  height: 36px;
+.input button {
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: none;
   background: linear-gradient(135deg, #e879f9, #a78bfa);
   color: white;
-  cursor: pointer;
+  font-size: 18px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="chat-container">
-  <div class="chat-header">
-    <div class="header-content">
-      <div class="nyla-avatar">N</div>
-      <div>
-        <h2>Nyla</h2>
-        <div class="status">online</div>
-      </div>
+<div class="app">
+  <div class="header">
+    <div class="avatar">N</div>
+    <div>
+      <h2>Nyla</h2>
+      <div class="status">online</div>
     </div>
   </div>
 
   <div class="messages" id="messages"></div>
 
-  <div class="input-area">
-    <input id="input" placeholder="Message Nyla..." />
+  <div class="input">
+    <input id="input" placeholder="Message Nyla..." autocomplete="off">
     <button id="send">➤</button>
   </div>
 </div>
 
 <script>
-/* SUPABASE INIT */
 const supabase = window.supabase.createClient(
   "https://sjwwkmjfehsondqbmouu.supabase.co",
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNqd3drbWpmZWhzb25kcWJtb3V1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU2MzE5MzksImV4cCI6MjA4MTIwNzkzOX0.cgooAxM2BXisi20RH-cKqardpt432dPAs1EI_mVqV0U"
 );
 
-/* API */
-const API_URL = "https://nyla-api.onrender.com/nyla";
+const API = "https://nyla-api.onrender.com/nyla";
 
-/* DOM */
 const messages = document.getElementById("messages");
 const input = document.getElementById("input");
 const send = document.getElementById("send");
@@ -197,40 +192,22 @@ const send = document.getElementById("send");
 send.onclick = sendMessage;
 input.onkeydown = e => e.key === "Enter" && sendMessage();
 
-/* UI */
-function addMessage(text, role, emotion=null) {
-  const msg = document.createElement("div");
-  msg.className = `message ${role}`;
-  msg.textContent = text;
+function addMessage(text, role, emotion) {
+  const m = document.createElement("div");
+  m.className = "msg " + role;
+  m.textContent = text;
 
   if (emotion) {
     const e = document.createElement("div");
     e.className = "emotion";
     e.textContent = emotion;
-    msg.appendChild(e);
+    m.appendChild(e);
   }
 
-  messages.appendChild(msg);
+  messages.appendChild(m);
   messages.scrollTop = messages.scrollHeight;
 }
 
-/* TYPING */
-let typingEl;
-function showTyping() {
-  typingEl = document.createElement("div");
-  typingEl.className = "message nyla";
-  typingEl.innerHTML = `<div class="typing">
-    <div class="dot"></div><div class="dot"></div><div class="dot"></div>
-  </div>`;
-  messages.appendChild(typingEl);
-  messages.scrollTop = messages.scrollHeight;
-}
-
-function hideTyping() {
-  typingEl?.remove();
-}
-
-/* LOAD HISTORY */
 async function loadHistory() {
   const { data } = await supabase
     .from("messages")
@@ -240,7 +217,6 @@ async function loadHistory() {
   data?.forEach(m => addMessage(m.content, m.role, m.emotion));
 }
 
-/* SEND */
 async function sendMessage() {
   if (!input.value.trim()) return;
   const text = input.value;
@@ -249,17 +225,21 @@ async function sendMessage() {
   addMessage(text, "user");
   await supabase.from("messages").insert({ role: "user", content: text });
 
-  showTyping();
+  const typing = document.createElement("div");
+  typing.className = "msg nyla";
+  typing.innerHTML = `<div class="typing"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>`;
+  messages.appendChild(typing);
+  messages.scrollTop = messages.scrollHeight;
 
   try {
-    const r = await fetch(API_URL, {
+    const r = await fetch(API, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ message: text })
     });
     const d = await r.json();
 
-    hideTyping();
+    typing.remove();
     addMessage(d.reply, "nyla", d.emotion);
 
     await supabase.from("messages").insert({
@@ -268,7 +248,7 @@ async function sendMessage() {
       emotion: d.emotion
     });
   } catch {
-    hideTyping();
+    typing.remove();
     addMessage("I glitched 😭", "nyla", "shocked");
   }
 }
